# pygon

./: CLAUDE.md  LICENSE  PYGON.md  README.md  TODO  TODO.md  pyproject.toml  requirements-specification-template.md  要件定義書テンプレート.md
.github/ISSUE_TEMPLATE/: call-claude.md
.github/workflows/: claude.yml
src/: __init__.py
src/config/: __init__.py
src/examples/: __init__.py  user_service.py
src/models/: __init__.py
src/protocols/: __init__.py
src/repositories/: __init__.py
src/services/: __init__.py
src/types/: __init__.py  result_types.py
src/utils/: __init__.py
src/validators/: __init__.py
tests/: __init__.py
tests/integration/: __init__.py
tests/unit/: __init__.py
